--- a/ifolder/src/iFolderShell/ConflictResolver.resx
+++ b/ifolder/src/iFolderShell/ConflictResolver.resx
@@ -338,13 +338,13 @@
     <value>False</value>
   </data>
   <data name="label3.Size" type="System.Drawing.Size, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>48, 16</value>
+    <value>56, 16</value>
   </data>
   <data name="label3.TabIndex" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>3</value>
   </data>
   <data name="label3.Text">
-    <value>Path:</value>
+    <value>Location:</value>
   </data>
   <data name="label3.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>TopLeft</value>
@@ -419,7 +419,7 @@
     <value>NoControl</value>
   </data>
   <data name="ifolderName.Location" type="System.Drawing.Point, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>64, 56</value>
+    <value>72, 56</value>
   </data>
   <data name="ifolderName.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>Inherit</value>
@@ -428,7 +428,7 @@
     <value>True</value>
   </data>
   <data name="ifolderName.Size" type="System.Drawing.Size, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>376, 16</value>
+    <value>368, 16</value>
   </data>
   <data name="ifolderName.TabIndex" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>2</value>
@@ -509,7 +509,7 @@
     <value>NoControl</value>
   </data>
   <data name="ifolderPath.Location" type="System.Drawing.Point, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>64, 80</value>
+    <value>72, 80</value>
   </data>
   <data name="ifolderPath.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>Inherit</value>
@@ -518,7 +518,7 @@
     <value>True</value>
   </data>
   <data name="ifolderPath.Size" type="System.Drawing.Size, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>376, 16</value>
+    <value>368, 16</value>
   </data>
   <data name="ifolderPath.TabIndex" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>4</value>
@@ -638,7 +638,7 @@
     <value>Private</value>
   </data>
   <data name="columnHeader1.Text">
-    <value>Conflict name</value>
+    <value>Name</value>
   </data>
   <data name="columnHeader1.TextAlign" type="System.Windows.Forms.HorizontalAlignment, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>Left</value>
@@ -653,7 +653,7 @@
     <value>Private</value>
   </data>
   <data name="columnHeader2.Text">
-    <value>Path in iFolder</value>
+    <value>Folder</value>
   </data>
   <data name="columnHeader2.TextAlign" type="System.Windows.Forms.HorizontalAlignment, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>Left</value>
@@ -668,7 +668,7 @@
     <value>Private</value>
   </data>
   <data name="columnHeader3.Text">
-    <value>Conflict type</value>
+    <value>Conflict Type</value>
   </data>
   <data name="columnHeader3.TextAlign" type="System.Windows.Forms.HorizontalAlignment, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>Left</value>
@@ -2314,11 +2314,11 @@
   <data name="&gt;&gt;versionsPanel.ZOrder">
     <value>2</value>
   </data>
-  <data name="serverPanel.Locked" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>False</value>
-  </data>
   <data name="serverPanel.SnapToGrid" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
+  </data>
+  <data name="serverPanel.Locked" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>False</value>
   </data>
   <data name="serverPanel.DrawGrid" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -2573,7 +2573,7 @@
     <value>0</value>
   </data>
   <data name="nameConflict.Text">
-    <value>Rename conflict</value>
+    <value>Rename</value>
   </data>
   <data name="nameConflict.ToolTip">
     <value />
@@ -2657,13 +2657,13 @@
     <value>False</value>
   </data>
   <data name="resolveName.Size" type="System.Drawing.Size, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>64, 23</value>
+    <value>70, 23</value>
   </data>
   <data name="resolveName.TabIndex" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>3</value>
   </data>
   <data name="resolveName.Text">
-    <value>&amp;Save</value>
+    <value>&amp;Rename</value>
   </data>
   <data name="resolveName.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>MiddleCenter</value>
@@ -2942,7 +2942,7 @@
     <value>0</value>
   </data>
   <data name="resolveNameLabel.Text">
-    <value>Enter a new name and click Save to resolve it.</value>
+    <value>Enter a new name and click Rename to resolve the conflict.</value>
   </data>
   <data name="resolveNameLabel.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>TopLeft</value>
@@ -3050,7 +3050,7 @@
     <value />
   </data>
   <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>NoControl</value>
+    <value>Inherit</value>
   </data>
   <data name="$this.Location" type="System.Drawing.Point, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>0, 0</value>
@@ -3112,34 +3112,34 @@
   <data name="&gt;&gt;$this.Type">
     <value>System.Windows.Forms.Form, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-	<data name="conflictResolveError">
-		<value>An error was encountered while attempting to resolve the conflict.</value>
-	</data>
-	<data name="conflictReadError">
-		<value>An error was encountered while reading the conflicts.</value>
-	</data>
-	<data name="openFileError">
-		<value>Unable to open the file.</value>
-	</data>
-	<data name="readOnlyInfo">
-		<value>Your ability to resolve conflicts is limited because you have read-only rights to this iFolder.  If there are conflicts that you are not allowed to resolve, the owner of this iFolder will need to fix the conflicts for you.</value>
-	</data>
-	<data name="fileExists">
-		<value>A file by this name already exists.  Please choose a different name.</value>
-	</data>
-	<data name="badFileName">
-		<value>The file name entered is invalid.  Please choose a different name and try again.</value>
-	</data>
-	<data name="name">
-	  <value>Name</value>
-	</data>
-	<data name="file">
-	  <value>File</value>
-	</data>
-	<data name="multiNameConflict">
-	  <value>Name conflicts must be resolved individually.</value>
-	</data>
-	<data name="multiSelect">
-	  <value>Multiple selected</value>
-	</data>
+  <data name="conflictResolveError">
+    <value>An error was encountered while attempting to resolve the conflict.</value>
+  </data>
+  <data name="conflictReadError">
+    <value>An error was encountered while reading the conflicts.</value>
+  </data>
+  <data name="openFileError">
+    <value>Unable to open the file.</value>
+  </data>
+  <data name="readOnlyInfo">
+    <value>Your ability to resolve conflicts is limited because you have read-only rights to this iFolder.  If there are conflicts that you are not allowed to resolve, the owner of this iFolder will need to fix the conflicts for you.</value>
+  </data>
+  <data name="fileExists">
+    <value>A file by this name already exists.  Please choose a different name.</value>
+  </data>
+  <data name="badFileName">
+    <value>The file name entered is invalid.  Please choose a different name and try again.</value>
+  </data>
+  <data name="name">
+    <value>Name</value>
+  </data>
+  <data name="file">
+    <value>File</value>
+  </data>
+  <data name="multiNameConflict">
+    <value>Name conflicts must be resolved individually.</value>
+  </data>
+  <data name="multiSelect">
+    <value>Multiple selected</value>
+  </data>
 </root>
