--- a/ifolder/src/FormsTrayApp/GlobalProperties.resx
+++ b/ifolder/src/FormsTrayApp/GlobalProperties.resx
@@ -410,7 +410,7 @@
     <value>True</value>
   </data>
   <data name="menuCreate.Text">
-    <value>&amp;Create iFolder</value>
+    <value>&amp;New...</value>
   </data>
   <data name="menuCreate.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -452,7 +452,7 @@
     <value>True</value>
   </data>
   <data name="menuAccept.Text">
-    <value>Set &amp;up iFolder</value>
+    <value>Set &amp;Up...</value>
   </data>
   <data name="menuAccept.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
@@ -536,7 +536,7 @@
     <value>True</value>
   </data>
   <data name="menuSyncNow.Text">
-    <value>S&amp;ync now</value>
+    <value>S&amp;ynchronize Now</value>
   </data>
   <data name="menuSyncNow.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
@@ -557,7 +557,7 @@
     <value>True</value>
   </data>
   <data name="menuRevert.Text">
-    <value>Revert to a &amp;normal folder</value>
+    <value>Re&amp;vert to a Normal Folder</value>
   </data>
   <data name="menuRevert.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
@@ -578,7 +578,7 @@
     <value>True</value>
   </data>
   <data name="menuRemove.Text">
-    <value>&amp;Remove iFolder</value>
+    <value>&amp;Remove</value>
   </data>
   <data name="menuRemove.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
@@ -674,7 +674,7 @@
     <value>True</value>
   </data>
   <data name="menuActionCreate.Text">
-    <value>&amp;Create</value>
+    <value>&amp;New...</value>
   </data>
   <data name="menuActionCreate.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -716,7 +716,7 @@
     <value>True</value>
   </data>
   <data name="menuActionAccept.Text">
-    <value>Set &amp;up iFolder</value>
+    <value>Set &amp;Up...</value>
   </data>
   <data name="menuActionAccept.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
@@ -737,7 +737,7 @@
     <value>True</value>
   </data>
   <data name="menuActionRemove.Text">
-    <value>&amp;Remove iFolder</value>
+    <value>&amp;Remove</value>
   </data>
   <data name="menuActionRemove.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
@@ -842,7 +842,7 @@
     <value>True</value>
   </data>
   <data name="menuActionSync.Text">
-    <value>S&amp;ync now</value>
+    <value>S&amp;ynchronize now</value>
   </data>
   <data name="menuActionSync.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -863,7 +863,7 @@
     <value>True</value>
   </data>
   <data name="menuActionRevert.Text">
-    <value>Revert to a &amp;normal folder</value>
+    <value>Re&amp;vert to a Normal Folder</value>
   </data>
   <data name="menuActionRevert.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -1172,7 +1172,7 @@
     <value>toolBar1</value>
   </data>
   <data name="&gt;&gt;toolBar1.Type">
-    <value>Novell.FormsTrayApp.ToolBarEx, iFolderApp, Version=1.0.1950.19150, Culture=neutral, PublicKeyToken=null</value>
+    <value>Novell.FormsTrayApp.ToolBarEx, iFolderApp, Version=1.0.2005.615, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;toolBar1.Parent">
     <value>$this</value>
@@ -1277,7 +1277,7 @@
     <value>-1</value>
   </data>
   <data name="toolBarSync.Text">
-    <value>Sync</value>
+    <value>Synchronize</value>
   </data>
   <data name="toolBarSync.ToolTipText">
     <value>Synchronize this iFolder</value>
@@ -1516,14 +1516,14 @@
   <data name="$this.GridSize" type="System.Drawing.Size, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>8, 8</value>
   </data>
+  <data name="$this.Name">
+    <value>GlobalProperties</value>
+  </data>
   <data name="$this.DrawGrid" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </data>
   <data name="$this.TrayHeight" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>80</value>
-  </data>
-  <data name="$this.Name">
-    <value>GlobalProperties</value>
   </data>
   <data name="$this.SnapToGrid" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -1565,7 +1565,7 @@
     <value />
   </data>
   <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>Inherit</value>
+    <value>NoControl</value>
   </data>
   <data name="$this.Location" type="System.Drawing.Point, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>0, 0</value>
@@ -1583,7 +1583,7 @@
     <value>WindowsDefaultLocation</value>
   </data>
   <data name="$this.Text">
-    <value>My iFolders</value>
+    <value>iFolders</value>
   </data>
   <data name="&gt;&gt;columnHeader1.Name">
     <value>columnHeader1</value>
@@ -1864,17 +1864,11 @@
   <data name="syncError">
     <value>An error was encountered while sending the sync command.</value>
   </data>
-  <data name="saveProxyError">
-    <value>An error was encountered while saving the proxy settings.</value>
-  </data>
   <data name="iFolderOpenError">
     <value>Unable to open iFolder {0}.</value>
   </data>
   <data name="iFolderRevertError">
     <value>An error was encountered while reverting the iFolder.</value>
-  </data>
-  <data name="subscriptionRemoveError">
-    <value>An error was encountered while removing the subscription.</value>
   </data>
   <data name="logEntriesCleared">
     <value>Log entries cleared.</value>
@@ -1948,14 +1942,8 @@
   <data name="statusSyncItemsFailed">
     <value>{0} items out of sync</value>
   </data>
-  <data name="readiFolderSettingsError">
-    <value>An error was encountered while reading the iFolder settings.</value>
-  </data>
-  <data name="readProxyError">
-    <value>An error was encountered while reading the proxy settings.</value>
-  </data>
   <data name="deleteAction">
-    <value>&amp;Delete iFolder</value>
+    <value>&amp;Delete</value>
   </data>
   <data name="revertTitle">
     <value>Revert iFolder Confirmation</value>
